# wiki-rag

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker.attempt  pyproject.toml  pytest.ini  requirements.txt
Dockerfiles/: Dockerfile.python  Dockerfile.tee
enclave_example/: build_enclave_server.sh
enclave_example/enclave-server/: Dockerfile  build_docker.sh  build_eif.sh  enclave_config.json  run_eif.sh  server.py  server.py.bak
enclave_example/parent-client/: client.py
enclave_example_2/: client.py  server.py
notebooks/: .gitignore  exploration.ipynb  extract_top_wiki_pages.ipynb  quick_start_notebook.ipynb
notebooks/wiki_faiss_index/: index.faiss  index.pkl
scrap/: faiss_cpu-1.11.0-cp311-cp311-macosx_14_0_arm64.whl
scrap/faiss/: __init__.py  array_conversions.py  class_wrappers.py  extra_wrappers.py  gpu_wrappers.py  loader.py  setup.py  swigfaiss.py
scrap/faiss/contrib/: big_batch_search.py  client_server.py  clustering.py  datasets.py  evaluation.py  exhaustive_search.py  factory_tools.py  inspect_tools.py  ivf_tools.py  ondisk.py  rpc.py  torch_utils.py  vecs_io.py
scrap/faiss/contrib/torch/: clustering.py  quantization.py
scripts/: .gitignore  build.sh  build_on_ec2.sh  construct_faiss.slrm  extract_wiki.slrm  rebuild_wiki_index.py  rsync_docker_image.sh  run.sh
tests/: README.md  conftest.py  test_encryption.py  test_fixes_summary.md  test_integration.py  test_rag.py  test_rag_server_api.py  test_summary.md  test_wikipedia.py
wiki_rag/: construct_faiss.py  encryption.py  example_rag_client.py  rag.py  rag_client.py  rag_server.py  rag_server.py.attempt  rag_server_api.py  rag_server_socket.py  remove_faiss_metadata.py  wikipedia.py
wiki_rag.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
